5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4431/executions/1650_2449.log
== TEST (2019-04-04 21:00:47) 
-- CODE:
a=float(input("Digite o valor de a: "))
b=float(input("Digite o valor de b: "))
c=float(input("Digite o valor de c: "))
d=float(input("Digite o valor de d: "))
e=float(input("Digite o valor de e: "))
f=float(input("Digite o valor de f: "))
if((a*e)-(b*d)==0):
	print("Nao tem solucao")
else:
   x=(c*e)-(b*f)/(a*e)-(b*d)
	y=(a*f)-(c*d)/(a*e)-(b*d)
	print(x)
	print(y)
-- ERROR:
File "XXXX", line 11
    y=(a*f)-(c*d)/(a*e)-(b*d)
                            ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 21:01:13) 
-- CODE:
a=float(input("Digite o valor de a: "))
b=float(input("Digite o valor de b: "))
c=float(input("Digite o valor de c: "))
d=float(input("Digite o valor de d: "))
e=float(input("Digite o valor de e: "))
f=float(input("Digite o valor de f: "))
if((a*e)-(b*d)==0):
	print("Nao tem solucao")
else:
   x=(c*e)-(b*f)/(a*e)-(b*d)
	 y=(a*f)-(c*d)/(a*e)-(b*d)
	print(x)
	print(y)
-- ERROR:
File "XXXX", line 11
    y=(a*f)-(c*d)/(a*e)-(b*d)
                            ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 21:01:41) 
-- CODE:
a=float(input("Digite o valor de a: "))
b=float(input("Digite o valor de b: "))
c=float(input("Digite o valor de c: "))
d=float(input("Digite o valor de d: "))
e=float(input("Digite o valor de e: "))
f=float(input("Digite o valor de f: "))
if((a*e)-(b*d)==0):
	print("Nao tem solucao")
else:
   x=(c*e)-(b*f)/(a*e)-(b*d)
	 x1=(a*f)-(c*d)/(a*e)-(b*d)
	print(x)
	print(x1)
-- ERROR:
File "XXXX", line 11
    x1=(a*f)-(c*d)/(a*e)-(b*d)
                             ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 21:02:06) 
-- CODE:
a=float(input("Digite o valor de a: "))
b=float(input("Digite o valor de b: "))
c=float(input("Digite o valor de c: "))
d=float(input("Digite o valor de d: "))
e=float(input("Digite o valor de e: "))
f=float(input("Digite o valor de f: "))
if((a*e)-(b*d)==0):
	print("Nao tem solucao")
else:
      x=(c*e)-(b*f)/(a*e)-(b*d)
	   y=(a*f)-(c*d)/(a*e)-(b*d)
	   print(x)
	   print(x1)
-- ERROR:
File "XXXX", line 11
    y=(a*f)-(c*d)/(a*e)-(b*d)
                            ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 21:03:36) 
-- CODE:
a=float(input("Digite o valor de a: "))
b=float(input("Digite o valor de b: "))
c=float(input("Digite o valor de c: "))
d=float(input("Digite o valor de d: "))
e=float(input("Digite o valor de e: "))
f=float(input("Digite o valor de f: "))
if((a*e)-(b*d)==0):
	print("Nao tem solucao")
else:
    x=(c*e)-(b*f)/(a*e)-(b*d)
	 y=(a*f)-(c*d)/(a*e)-(b*d)
	 print(x)
	 print(x1)
-- ERROR:
File "XXXX", line 11
    y=(a*f)-(c*d)/(a*e)-(b*d)
                            ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 21:04:30) 
-- CODE:
a=float(input("Digite o valor de a: "))
b=float(input("Digite o valor de b: "))
c=float(input("Digite o valor de c: "))
d=float(input("Digite o valor de d: "))
e=float(input("Digite o valor de e: "))
f=float(input("Digite o valor de f: "))
x=(c*e)-(b*f)/(a*e)-(b*d)
y=(a*f)-(c*d)/(a*e)-(b*d)
if((a*e)-(b*d)==0):
	print("Nao tem solucao")
else:
	print(x)
	print(y)
-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 21:06:37) 
-- CODE:
a=float(input("Digite o valor de a: "))
b=float(input("Digite o valor de b: "))
c=float(input("Digite o valor de c: "))
d=float(input("Digite o valor de d: "))
e=float(input("Digite o valor de e: "))
f=float(input("Digite o valor de f: "))
x=((c*e)-(b*f))/((a*e)-(b*d))
y=(a*f)-(c*d)/(a*e)-(b*d)
if((a*e)-(b*d)==0):
	print("Nao tem solucao")
else:
	print(x)
	print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x=((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 21:07:01) 
-- CODE:
a=float(input("Digite o valor de a: "))
b=float(input("Digite o valor de b: "))
c=float(input("Digite o valor de c: "))
d=float(input("Digite o valor de d: "))
e=float(input("Digite o valor de e: "))
f=float(input("Digite o valor de f: "))
x=((c*e)-(b*f))/((a*e)-(b*d))
y=((a*f)-(c*d))/((a*e)-(b*d))
if((a*e)-(b*d)==0):
	print("Nao tem solucao")
else:
	print(x)
	print(y)
-- EXECUTION TIME:
0.145146
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1650/2449/main.py", line 7, in <module>
    x=((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 21:07:07) 
-- CODE:
a=float(input("Digite o valor de a: "))
b=float(input("Digite o valor de b: "))
c=float(input("Digite o valor de c: "))
d=float(input("Digite o valor de d: "))
e=float(input("Digite o valor de e: "))
f=float(input("Digite o valor de f: "))
x=((c*e)-(b*f))/((a*e)-(b*d))
y=((a*f)-(c*d))/((a*e)-(b*d))
if((a*e)-(b*d)==0):
	print("Nao tem solucao")
else:
	print(x)
	print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x=((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 21:07:32) 
-- CODE:
a=float(input("Digite o valor de a: "))
b=float(input("Digite o valor de b: "))
c=float(input("Digite o valor de c: "))
d=float(input("Digite o valor de d: "))
e=float(input("Digite o valor de e: "))
f=float(input("Digite o valor de f: "))
x=((c*e)-(b*f))/((a*e)-(b*d))
y=((a*f)-(c*d))/((a*e)-(b*d))
if(((a*e)-(b*d))==0):
	print("Nao tem solucao")
else:
	print(x)
	print(y)
-- EXECUTION TIME:
0.138932
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1650/2449/main.py", line 7, in <module>
    x=((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 21:07:35) 
-- CODE:
a=float(input("Digite o valor de a: "))
b=float(input("Digite o valor de b: "))
c=float(input("Digite o valor de c: "))
d=float(input("Digite o valor de d: "))
e=float(input("Digite o valor de e: "))
f=float(input("Digite o valor de f: "))
x=((c*e)-(b*f))/((a*e)-(b*d))
y=((a*f)-(c*d))/((a*e)-(b*d))
if(((a*e)-(b*d))==0):
	print("Nao tem solucao")
else:
	print(x)
	print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x=((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 21:08:12) 
-- CODE:
a=float(input("Digite o valor de a: "))
b=float(input("Digite o valor de b: "))
c=float(input("Digite o valor de c: "))
d=float(input("Digite o valor de d: "))
e=float(input("Digite o valor de e: "))
f=float(input("Digite o valor de f: "))
if(((a*e)-(b*d))==0):
	print("Nao tem solucao")
else:
	x=((c*e)-(b*f))/((a*e)-(b*d))
   y=((a*f)-(c*d))/((a*e)-(b*d))
	print(x)
	print(y)
-- ERROR:
File "XXXX", line 11
    y=((a*f)-(c*d))/((a*e)-(b*d))
                                ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 21:08:29) 
-- CODE:
a=float(input("Digite o valor de a: "))
b=float(input("Digite o valor de b: "))
c=float(input("Digite o valor de c: "))
d=float(input("Digite o valor de d: "))
e=float(input("Digite o valor de e: "))
f=float(input("Digite o valor de f: "))
y=0
if(((a*e)-(b*d))==0):
	print("Nao tem solucao")
else:
	x=((c*e)-(b*f))/((a*e)-(b*d))
   y=((a*f)-(c*d))/((a*e)-(b*d))
	print(x)
	print(y)
-- ERROR:
File "XXXX", line 12
    y=((a*f)-(c*d))/((a*e)-(b*d))
                                ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 21:08:44) 
-- CODE:
a=float(input("Digite o valor de a: "))
b=float(input("Digite o valor de b: "))
c=float(input("Digite o valor de c: "))
d=float(input("Digite o valor de d: "))
e=float(input("Digite o valor de e: "))
f=float(input("Digite o valor de f: "))
y=0
if(((a*e)-(b*d))==0):
	print("Nao tem solucao")
else:
	x =((c*e)-(b*f))/((a*e)-(b*d))
   y =((a*f)-(c*d))/((a*e)-(b*d))
	print(x)
	print(y)
-- ERROR:
File "XXXX", line 12
    y =((a*f)-(c*d))/((a*e)-(b*d))
                                 ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 21:10:34) 
-- CODE:
a=float(input("Digite o valor de a: "))
b=float(input("Digite o valor de b: "))
c=float(input("Digite o valor de c: "))
d=float(input("Digite o valor de d: "))
e=float(input("Digite o valor de e: "))
f=float(input("Digite o valor de f: "))
if(((a*e)-(b*d))==0):
	print("Nao tem solucao")
else:
	y=0
	x=0
	x =((c*e)-(b*f))/((a*e)-(b*d))
   y =((a*f)-(c*d))/((a*e)-(b*d))
	print(x)
	print(y)
-- ERROR:
File "XXXX", line 13
    y =((a*f)-(c*d))/((a*e)-(b*d))
                                 ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 21:12:21) 
-- CODE:
a=float(input("Digite o valor de a: "))
b=float(input("Digite o valor de b: "))
c=float(input("Digite o valor de c: "))
d=float(input("Digite o valor de d: "))
e=float(input("Digite o valor de e: "))
f=float(input("Digite o valor de f: "))
if(((a*e)-(b*d))==0):
	print("Nao tem solucao")
else:
	y=0
	x=0
	x =((c*e)-(b*f))/((a*e)-(b*d))
   y =((a*f)-(c*d))/((a*e)-(b*d))
	print(x)
	print(y)
-- ERROR:
File "XXXX", line 13
    y =((a*f)-(c*d))/((a*e)-(b*d))
                                 ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 21:13:36) 
-- CODE:
a=float(input("Digite o valor de a: "))
b=float(input("Digite o valor de b: "))
c=float(input("Digite o valor de c: "))
d=float(input("Digite o valor de d: "))
e=float(input("Digite o valor de e: "))
f=float(input("Digite o valor de f: "))
if(((a*e)-(b*d))!=0):
	x =((c*e)-(b*f))/((a*e)-(b*d))
   y =((a*f)-(c*d))/((a*e)-(b*d))
	print(x)
	print(y)
else:
	print("Nao tem solucao")
	
-- ERROR:
File "XXXX", line 9
    y =((a*f)-(c*d))/((a*e)-(b*d))
                                 ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 13:59:09) 
-- CODE:
a=float(input("Digite o valor de a: "))
b=float(input("Digite o valor de b: "))
c=float(input("Digite o valor de c: "))
d=float(input("Digite o valor de d: "))
e=float(input("Digite o valor de e: "))
f=float(input("Digite o valor de f: "))
if(((a*e)-(b*d))!=0):
	x =((c*e)-(b*f))/((a*e)-(b*d))
   y =((a*f)-(c*d))/((a*e)-(b*d))
	print(x)
	print(y)
else:
	print("Nao tem solucao")
	
-- ERROR:
File "XXXX", line 9
    y =((a*f)-(c*d))/((a*e)-(b*d))
                                 ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 13:59:39) 
-- CODE:
a=float(input("Digite o valor de a: "))
b=float(input("Digite o valor de b: "))
c=float(input("Digite o valor de c: "))
d=float(input("Digite o valor de d: "))
e=float(input("Digite o valor de e: "))
f=float(input("Digite o valor de f: "))
if(((a*e)-(b*d))!=0):
	x =((c*e)-(b*f))/((a*e)-(b*d))
   y =((a*f)-(c*d))/((a*e)-(b*d))
else:
	print("Nao tem solucao")
print(x)
print(y)	
	
-- ERROR:
File "XXXX", line 9
    y =((a*f)-(c*d))/((a*e)-(b*d))
                                 ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 14:01:46) 
-- CODE:
a=float(input("Digite o valor de a: "))
b=float(input("Digite o valor de b: "))
c=float(input("Digite o valor de c: "))
d=float(input("Digite o valor de d: "))
e=float(input("Digite o valor de e: "))
f=float(input("Digite o valor de f: "))
x=(c*e)-(b*f)
y=(a*f)-(c*d)
z=(a*e)-(b*d)
if(z!=0):
	x=x/z
	y=y/z
	print(x)
	print(y)
else:
	print("Nao tem solucao")	
	
-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 14:01:59) 
-- CODE:
a=float(input("Digite o valor de a: "))
b=float(input("Digite o valor de b: "))
c=float(input("Digite o valor de c: "))
d=float(input("Digite o valor de d: "))
e=float(input("Digite o valor de e: "))
f=float(input("Digite o valor de f: "))
x=(c*e)-(b*f)
y=(a*f)-(c*d)
z=(a*e)-(b*d)
if(z!=0):
	x=x/z
	y=y/z
	print(x)
	print(y)
else:
	print("Nao tem solucao")	
	
-- EXECUTION TIME:
0.15222
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
Nao tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
-0.22641509433962265
1.528301886792453
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
-0.15705128205128205
1.1618589743589745
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
